elib-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elib-web-ingress
  namespace: elib
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/subnets: subnet-00bb33c84650df8c7,subnet-05d0db3d0b72a588a
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elib-chart-web
                port:
                  number: 8080
